--- a/wxplotjs/scss/wxplot.scss
+++ b/wxplotjs/scss/wxplot.scss
@@ -9,8 +9,9 @@
 		margin-right: 3px;
 	}
 
+	/* Fonts vary so it's best for this to be on the bigger side. */
 	input {
-		width: 6rem;
+		width: 7rem;
 	}
 }
 
@@ -29,9 +30,10 @@ div.wxplot-interval-control {
 
 .wxplot-legend-group {
 	display: inline-block;
-	border: 1px solid black;
+	background-color: white;
 	padding: 2px;
 	margin: 2px;
+	border: 1px solid black;
 
 	div {
 		display: inline-block;
@@ -54,37 +56,47 @@ div.wxplot-interval-control {
 	margin: 2px;
 
 	input {
+		font: 1rem sans-serif;
 		margin: 3px;
 		border:1px solid #CCCCCC;
 		border-radius: 3px;
 		background-color: #F4F5F5;
 		-webkit-appearance: none;
 
-		&:hover {
-			border:1px solid #ADADAD;
-			background-color: #d9dddd;
+		/* Prevent sticky hover on mobile */
+		@media (hover: hover) {
+			&:hover {
+				border:1px solid #ADADAD;
+				background-color: #d9dddd;
+			}
 		}
 
 		&.color-left {
 			background-image: linear-gradient(to right, lightblue, #F4F5F5);
 
-			&:hover {
-				background-image: linear-gradient(to right, #8ac7db, #d9dddd);
+			@media (hover: hover) {
+				&:hover {
+					background-image: linear-gradient(to right, #8ac7db, #d9dddd);
+				}
 			}
 		}
 
 		&.color-center {
 			background-color: lightblue;
 
-			&:hover {
-				background-color: #8ac7db;
+			@media (hover: hover) {
+				&:hover {
+					background-color: #8ac7db;
+				}
 			}
 		}
 
 		&.color-right {
 			background-image: linear-gradient(to right, #F4F5F5, lightblue);
-			&:hover {
-				background-image: linear-gradient(to right, #d9dddd, #8ac7db);
+			@media (hover: hover) {
+				&:hover {
+					background-image: linear-gradient(to right, #d9dddd, #8ac7db);
+				}
 			}
 		}
 	}
